[package]
name = "moonrs"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = {version="0.22.2", optional = true, features = ["extension-module"]}
petgraph = "0.6.5"
nalgebra = "0.33.0"
statrs = "0.17.1"
indexmap = "2.2.6"
scopeguard = "1.2.0"
cached = "0.53.1"
lazy_static = "1.5.0"
katex-doc = "0.1.0"

[features]
python = ["pyo3"]

[lib]
name = "moonrs"
crate-type = ["cdylib"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
